# h5web

./: .env  .env.test  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  create_h5_sample.py  cypress.config.ts  cypress.json  docker-compose.yaml  docker-compose.yml  eslint.config.base.js  eslint.config.js  eslint.shared.cjs  eslint.shared.js  jest.config.js  jest.config.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.base.json  tsconfig.bundler.json  tsconfig.json  tsconfig.lint.json  vitest.config.ts  vitest.workspace.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: approve-snapshots.yml  cypress.yml  deploy-storybook.yml  lint-test.yml  main.yml  publish-packages.yml  release.yml  slash-commands.yml  storybook.yml
.storybook/: main.js  preview-head.html  preview.js
.storybook/decorators/: FillHeight.tsx
apps/demo/: .env  .env.production  .eslintrc.cjs  config-overrides.js  eslint.config.js  index.html  package.json  vite.config.js
apps/demo-cra-lib/: .env  .env.production  config-overrides.js  package.json
apps/storybook/: .env  .env.production  .eslintignore  .eslintrc.cjs  .eslintrc.js  eslint.config.js  package.json  tsconfig.json  types.d.ts
cypress/: index.d.ts  plugins.ts  support.js  support.ts  tsconfig.json
cypress/e2e/: app.cy.ts
cypress/integration/: app.spec.ts
cypress/specs/: app.spec.ts
cypress/support/: index.js
lib/: package-lock.json  package.json  tsconfig.build.json  webpack.config.js
patches/: @types__jest-image-snapshot@6.4.0.patch
src/: App.js  App.test.js  App.test.tsx  App.tsx  Browser.tsx  Viewer.tsx  index.tsx  lib.ts  moduleMock.js  raw-data.json  react-app-env.d.ts  setupTests.js  utils.ts  workerLoaderMock.js
src/browser/: Browser.tsx  TreeNodeIcon.tsx
src/dataset-visualizer/: DatasetVisualizer.module.css  DatasetVisualizer.tsx
src/demo-app/: DemoApp.test.tsx  DemoApp.tsx  H5CoreApp.tsx  H5GroveApp.tsx  HsdsApp.tsx  JupyterApp.tsx
src/explorer/: Explorer.tsx  Icon.module.css  Icon.tsx  TreeNodeIcon.tsx  TreeView.tsx  models.ts  utils.test.ts  utils.ts
support/: Pipfile  sample.sh
support/h5grove/: fastapi_app.py  pyproject.toml  tornado_app.py
support/hsds/: pyproject.toml
support/hsds/config/: override.yml
support/sample/: create_h5_sample.py  pyproject.toml
(+643 files in other folders)
