[project]
name = "h5grove-tornado"
version = "0.1.0"
description = "h5grove tornado server for testing purposes"
authors = [{name = "ESRF"}]
requires-python = ">=3.12"
dependencies = [
  "h5grove[tornado] (==2.3.0)",
  "typing-extensions (~=4.10)"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"
