[project]
name = "h5grove-fastapi"
version = "0.1.0"
description = "h5grove FastAPI server for testing purposes"
authors = [{name = "ESRF"}]
requires-python = ">=3.12"
dependencies = [
  "h5grove[fastapi] (==3.0.0)",
  "typing-extensions (~=4.10)"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"
