[project]
name = "sample"
version = "0.1.0"
description = "Script to create HDF5 sample file for testing purposes"
authors = [{name = "ESRF"}]
requires-python = ">=3.12"
dependencies = [
  "numpy (~=1.26)",
  "h5py (~=3.10)"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"
